rename soi to retailer
