# src/entity/Retailer/Retailer.common.ts
@@ -1,0 +1,6 @@
+import { Entity } from 'typeorm';
+import { BaseRetailer } from './BaseRetailer';
+
+@Entity('retailer')
+export class Retailer extends BaseRetailer{
+}
