# src/entity/Retailer/index.ts
@@ -1,0 +1,3 @@
+import { Retailer } from "./Retailer.common";
+
+export default Retailer;
